# Dual_Piper_Jakcal

./: .gitignore  README(EN).MD  README.MD  README.md
config/: dual_piper.urdf.xacro
src/dual_piper_description/: CMakeLists.txt  package.xml
src/dual_piper_description/launch/: display_dual_piper.launch.py
src/dual_piper_description/rviz/: dual_piper.rviz
src/dual_piper_description/urdf/: dual_piper.urdf  dual_piper.urdf.xacro  dual_piper_isaac.urdf
src/dual_piper_description/urdf/dual_piper/: dual_piper.usd
src/dual_piper_description/urdf/dual_piper/configuration/: dual_piper_physics.usd
src/dual_piper_description/urdf/dual_piper_isaac/: dual_piper_isaac.usd
src/dual_piper_description/urdf/dual_piper_isaac/configuration/: dual_piper_isaac_physics.usd  dual_piper_isaac_sensor.usd
src/dual_piper_isaac_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_piper_isaac_moveit/config/: dual_piper.ros2_control.xacro  dual_piper.srdf  dual_piper.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/dual_piper_isaac_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_piper_moviet_3/: .setup_assistant  CMakeLists.txt  package.xml
src/isaac_dual_arm/: package.xml  setup.cfg  setup.py
src/piper/: setup.py
src/piper_description/: CMakeLists.txt
src/piper_moveit/: README(EN).md  README.md
src/piper_sim/: README(EN).md  README.md
(+39 files in other folders)
